--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>VKSK</title>
-    <link rel="icon" type="image/x-icon" href="https://www.clipartmax.com/png/small/307-3078886_cotton-clipart-cotton-ball-cotton.png">
+    <link rel="icon" type="image/x-icon" href="cotton1.png">
     <style>
         body {
             background-image: url(farm1.jpg);
